--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.4.7",
     "i": "^0.3.7",
     "npm": "^11.1.0",
     "react": "^19.0.0",
